<resources>
    <string name="app_name">MyBoardGames</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_games">Games</string>
    <string name="title_add_game">Add game</string>

    <string-array name="sort_items">
        <item>By name</item>
        <item>By name\nreverse</item>
        <item>By date of\nlast choosing</item>
        <item>By date of\nlast choosing\nreverse</item>
        <item>By quantity\nof points</item>
        <item>By quantity\nof points reverse</item>
    </string-array>

    <string-array name="points">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="favorite">
        <item>Так</item>
        <item>Ні</item>
    </string-array>

    <string-array name="years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>100</item>
    </string-array>

    <string-array name="quantOfPlayers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="time">
        <item>не встановлено</item>
        <item>5 хв</item>
        <item>10 хв</item>
        <item>15 хв</item>
        <item>20 хв</item>
        <item>30 хв</item>
        <item>40 хв</item>
        <item>50 хв</item>
        <item>1 год</item>
        <item>2 год</item>
        <item>3 год</item>
        <item>4 год</item>
        <item>5 год і більше</item>
    </string-array>

    <string-array name="start_categories">
        <item>загальна категорія</item>
        <item>бродилки</item>
        <item>в дорогу</item>
        <item>гумористичні</item>
        <item>економічні</item>
        <item>карткові</item>
        <item>командні</item>
        <item>логічні</item>
        <item>на удачу</item>
        <item>розвиваючі</item>
        <item>стратегії</item>
        <item>творчі</item>
    </string-array>

    <string name="title_activity_game_info">Game Info</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="categories_filter_label">Категорії</string>
    <string name="points_filter_label">Бали</string>
    <string name="favorite_filter_label">Улюблені</string>
    <string name="selectCategories">Оберіть категорії гри</string>
    <string name="ok">OK</string>
    <string name="choose_categories">Оберіть категорії</string>
    <string name="action_categories">Categories</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_title_add">Додавання категорії</string>
    <string name="dialog_title_edit">Редагування категорії</string>
    <string name="dialog_category_name_hint_add">Введіть назву категорії</string>
    <string name="dialog_category_name_hint_edit">Введіть нову назву категорії</string>
    <string name="cancel">Скасувати</string>
    <string name="dialog_button_add">Додати</string>
    <string name="dialog_button_edit">Оновити</string>
    <string name="nameT">Назва</string>
    <string name="descriptionT">Опис</string>
    <string name="rulesT">Правила</string>
    <string name="placeT">Місцезнаходження</string>
    <string name="ageT1">Вік: від </string>
    <string name="ageT2">до</string>
    <string name="playersT1">Кількість гравців: від</string>
    <string name="playersT2">до</string>
    <string name="timeT">Час гри</string>
    <string name="categoriesT">Категорії</string>
</resources>