<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ViewStub
        android:id="@+id/filter_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/filter_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/purple_light"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ageT1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/ageT1"/>
            <include
                layout="@layout/my_spinner"
                android:id="@+id/smallestAgeSpF"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toRightOf="@id/ageT1"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/ageT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@id/smallestAgeSpF"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/ageT2"/>
            <include
                layout="@layout/my_spinner"
                android:id="@+id/biggestAgeSpF"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toRightOf="@id/ageT2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playersT1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/playersT1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ageT1"/>
            <include
                layout="@layout/my_spinner"
                android:id="@+id/smallestQuantOfPlayersSpF"
                android:layout_width="25dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                app:layout_constraintLeft_toRightOf="@id/playersT1"
                app:layout_constraintTop_toBottomOf="@id/ageT1" />
            <TextView
                android:id="@+id/playersT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/playersT2"
                app:layout_constraintLeft_toRightOf="@id/smallestQuantOfPlayersSpF"
                app:layout_constraintTop_toBottomOf="@id/ageT1" />
            <include
                layout="@layout/my_spinner"
                android:id="@+id/biggestQuantOfPlayersSpF"
                android:layout_width="25dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                app:layout_constraintLeft_toRightOf="@id/playersT2"
                app:layout_constraintTop_toBottomOf="@id/ageT1"/>

            <TextView
                android:id="@+id/timeT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/timeT"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playersT1" />
            <include
                layout="@layout/my_spinner"
                android:id="@+id/playingTimeSpF"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toRightOf="@id/timeT"
                app:layout_constraintTop_toBottomOf="@id/playersT1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ExpandableListView
            android:id="@+id/filter_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"/>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>